--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "standard": "^17.1.2",
     "typescript": "~5.1.3"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
